<resources>
    <string name="app_name">Transformers</string>
    <string name="home_title">Home</string>
    <string name="transformers_list">Transformers</string>
    <string name="new_autobot_btn">New Autobot</string>
    <string name="new_decepticon_btn">New Decepticon</string>
    <string name="new_autobot">New Autobot 🤖</string>
    <string name="new_decepticon">New Decepticon 🤖</string>
    <string name="update_autobot">Update Autobot 🤖</string>
    <string name="update_decepticon">Update Decepticon 🤖</string>
    <string name="battle">⚔️ Battle ⚔️</string>
    <string name="transformer_name">Name</string>
    <string name="random">Random Values 🔀</string>
    <string name="save">Save 💾</string>
    <string name="delete">Delete ☢️</string>
    <string name="battle_result">Battle result:️</string>
    <string name="battles">Battles:</string>
    <string name="autobot_survivors">Autobot survivors:</string>
    <string name="decepticon_survivors">Decepticon survivors:</string>
    <string name="all_destroyed">All transformers destroyed ☢️</string>
    <string name="autobots_won">Autobots won! 🎉</string>
    <string name="decepticons_won">Decepticons won! 🎉</string>
    <string name="draw">Draw! 🕊️</string>
    <string name="none">None</string>
    <string name="battle_error_no_autobot_and_decepticon">Create an Autobot and Decepticon to battle</string>
    <string name="battle_error_no_autobot">Create an Autobot to battle</string>
    <string name="battle_error_no_decepticon">Create a Decepticon to battle</string>
    <string name="no_name_error">Please enter a Transformer name</string>


    <!-- Transformer definitions-->
    <string name="strength">Strength</string>
    <string name="intelligence">Intelligence</string>
    <string name="speed">Speed</string>
    <string name="endurance">Endurance</string>
    <string name="rank">Rank</string>
    <string name="courage">Courage</string>
    <string name="firepower">Firepower</string>
    <string name="skill">Skill</string>


</resources>
