<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/medium_padding">

            <TextView
                android:id="@+id/title"
                style="@style/textLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_padding"
                android:layout_marginEnd="@dimen/small_padding"
                android:text="New Autobot"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/transformer_name"
                style="@style/textMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_padding"
                android:layout_marginTop="@dimen/small_padding"
                android:layout_marginEnd="@dimen/small_padding"
                android:hint="@string/transformer_name"
                android:inputType="textPersonName"
                android:text="@={viewModel.transformerName}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title" />


            <com.example.ui.transformer.TransformerSeekBar
                android:id="@+id/seek_bar_strength"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/transformer_name"
                app:seekBarLabelText="@string/strength" />

            <com.example.ui.transformer.TransformerSeekBar
                android:id="@+id/seek_bar_intelligence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/seek_bar_strength"
                app:seekBarLabelText="@string/intelligence" />

            <com.example.ui.transformer.TransformerSeekBar
                android:id="@+id/seek_bar_speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/seek_bar_intelligence"
                app:seekBarLabelText="@string/speed" />


            <com.example.ui.transformer.TransformerSeekBar
                android:id="@+id/seek_bar_endurance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/seek_bar_speed"
                app:seekBarLabelText="@string/endurance" />


            <com.example.ui.transformer.TransformerSeekBar
                android:id="@+id/seek_bar_rank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/seek_bar_endurance"
                app:seekBarLabelText="@string/rank" />


            <com.example.ui.transformer.TransformerSeekBar
                android:id="@+id/seek_bar_courage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/seek_bar_rank"
                app:seekBarLabelText="@string/courage" />


            <com.example.ui.transformer.TransformerSeekBar
                android:id="@+id/seek_bar_firepower"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/seek_bar_courage"
                app:seekBarLabelText="@string/firepower" />

            <com.example.ui.transformer.TransformerSeekBar
                android:id="@+id/seek_bar_skill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/seek_bar_firepower"
                app:seekBarLabelText="@string/skill" />

            <Button
                android:id="@+id/save_btn"
                style="@style/transformerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_padding"
                android:text="@string/save"
                android:onClick="@{() -> viewModel.onSaveCtaClick()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/seek_bar_skill" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <data>

        <variable
            name="viewModel"
            type="com.example.ui.transformer.TransformerViewModel" />
    </data>


</layout>